--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-mysql-session": "^3.0.0",
     "express-php-fpm": "^3.0.0",
     "express-session": "^1.17.3",
@@ -29,6 +30,7 @@
     "php-express": "^0.0.3",
     "php-proxy-middleware": "^1.0.1",
     "twilio": "^4.17.0",
+    "uuid": "^9.0.1",
     "xml2js": "^0.6.2"
   }
 }
